# LLM-SPOT-Project

./: projectproposal.txt
Documents/: SpotSDKSetUp.md  VoiceInput.md  diagram.txt  project-proposal.txt
install/: setup.bash  setup.ps1  setup.zsh
install/spot_schemas/lib/spot_schemas/: detect_color_schema  rotate_schema
install/spot_schemas/share/spot_schemas/: package.bash  package.dsv  package.xml
install/spot_schemas_interfaces/share/spot_schemas_interfaces/: local_setup.zsh  package.bash  package.zsh
install/spot_schemas_interfaces/share/spot_schemas_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  export_spot_schemas_interfaces__rosidl_generator_cExport.cmake  export_spot_schemas_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_spot_schemas_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  (+9 more)
log/: latest_build
ros2/spot_ai/: setup.py
src/motor_schema/install/: local_setup.sh  setup.sh
src/motor_schema/spot_schemas/: setup.py
src/motor_schema/spot_schemas_interfaces/: package.xml
src/motor_schema/spot_schemas_interfaces/msg/: GraspStatus.msg
src/motor_schema/spot_schemas_interfaces/srv/: WalkToPose.srv
src/spot_schemas/: package.xml  setup.cfg  setup.py
src/spot_schemas/spot_schemas/: detect_color_schema.py  rotate_schema.py  walking_schema.py
src/spot_schemas_interfaces/: CMakeLists.txt
src/spot_schemas_interfaces/msg/: Object2D.msg  ObjectPose3D.msg
src/spot_schemas_interfaces/srv/: Rotate.srv  Walk.srv
(+153 files in other folders)
